--- a/config.yml
+++ b/config.yml
@@ -5,6 +5,14 @@
 #
 # a simple plugin that helps you customize your server chat to make it look better also provides a customizable chat system by group or rank
 #
+# |Links|
+# -> Spigot: https://www.spigotmc.org/resources/advancedchat-1-7-x-1-17-x.83889/
+# -> Songoda: https://songoda.com/marketplace/product/advancedchat-chat-related.542
+# -> Wiki [Working Progress]: https://jonagamerpro1234.gitbook.io/advancedchat/
+# -> Discord: https://discord.gg/c5GhQDQCK5
+# -> Issue Tracker: https://github.com/jonagamerpro1234/AdvancedChat/issues
+# -> Plugin Statistics: https://bstats.org/plugin/bukkit/AdvancedChat/8826
+#
 Settings:
   
   # |Config-Version| not touch
@@ -176,18 +184,18 @@ ProtocolLib-Packet:
 #    ClickEvent:
 #      Action: 'say hello <name>'
 #      Mode: Cmd there are three different modes which are [ Cmd | Url | Suggest_Cmd ]  
-Custom-Format:
-  Text: '&6[&c<name>&6] &7<msg>'
-  Experimental-Text: '&6[&c<name>&6] '
-  Type: experimental
-  HoverEvent:
-    Text: '&ahello &d<name>'
-    Mode: Text
-  ClickEvent:
-    Command: ''
-    Url: ''
-    Action: 'say hello <name>'
-    Mode: Cmd
+#Custom-Format:
+#  Text: '&6[&c<name>&6] &7<msg>'
+#  Experimental-Text: '&6[&c<name>&6] '
+#  Type: experimental
+#  HoverEvent:
+#    Text: '&ahello &d<name>'
+#    Mode: Text
+#  ClickEvent:
+#    Command: ''
+#    Url: ''
+#    Action: 'say hello <name>'
+#    Mode: Cmd
 #
 # | Groups |
 # | here you can customize the chat of different groups or ranks in a more specific way |
@@ -208,40 +216,41 @@ Custom-Format:
 #    ClickEvent:
 #      Action: 'say hello <name>'
 #      Mode: Cmd there are three different modes which are [ Cmd | Url | Suggest_Cmd ] 
-Groups:
-  Default:
-    Format: '&9|&e<name>&9|&8> &7<msg>'
-    Experimental-Format: '&6[&c<name>&6] '
-    Permission: 'advancedchat.group.default'
-    Type: normal
-    HoverEvent:
-      Text: '&6hello &b<name>'
-      Mode: Text
-    ClickEvent:
-      Action: 'say hello <name>'
-      Mode: Cmd
-  Admin:
-    Format: '&9|&e<name>&9|&8> &e<msg>'
-    Experimental-Format: '&6[&c<name>&6] '
-    Permission: 'advancedchat.group.admin'
-    Type: normal
-    HoverEvent:
-      Text: '&6hello &b<name>'
-      Mode: Text
-    ClickEvent:
-      Action: 'say hello <name>'
-      Mode: Cmd
-  Owner:
-    Format: '&9|&e<name>&9|&8> &c<msg>'
-    Experimental-Format: '&6[&c<name>&6] '
-    Permission: 'advancedchat.group.owner'
-    Type: normal
-    HoverEvent:
-      Text: '&6hello &b<name>'
-      Mode: Text
-    ClickEvent:
-      Action: 'say hello <name>'
-      Mode: Cmd
+#Groups:
+#  Default:
+#    Format: '&9|&e<name>&9|&8> &7<msg>'
+#    Experimental-Format: '&6[&c<name>&6] '
+#    Permission: 'advancedchat.group.default'
+#    Type: normal
+#    HoverEvent:
+#      Text: '&6hello &b<name>'
+#      Mode: Text
+#    ClickEvent:
+#      Action: 'say hello <name>'
+#      Mode: Cmd
+#  Admin:
+#    Format: '&9|&e<name>&9|&8> &e<msg>'
+#    Experimental-Format: '&6[&c<name>&6] '
+#    Permission: 'advancedchat.group.admin'
+#    Type: normal
+#    HoverEvent:
+#      Text: '&6hello &b<name>'
+#      Mode: Text
+#    ClickEvent:
+#      Action: 'say hello <name>'
+#      Mode: Cmd
+#  Owner:
+#    Format: '&9|&e<name>&9|&8> &c<msg>'
+#    Experimental-Format: '&6[&c<name>&6] '
+#    Permission: 'advancedchat.group.owner'
+#    Type: normal
+#    HoverEvent:
+#      Text: '&6hello &b<name>'
+#      Mode: Text
+#    ClickEvent:
+#      Action: 'say hello <name>'
+#      Mode: Cmd
+
 #
 # |Filter Chat|
 # |here you can filter the unwanted words on your server and have a little more control over the chat
