--- a/AdvancedChat/player-gui.yml
+++ b/AdvancedChat/player-gui.yml
@@ -1,3 +1,8 @@
+# |    AdvancedChat     |
+# | By jonagamerpro1234 |
+# |     Version 1.6.0   |
+# |_____________________|
+#
 Title: '&b&lMenu &8&l> &e&lPlayer'
 Items:
   Next:
