--- a/AdvancedChat/pom.xml
+++ b/AdvancedChat/pom.xml
@@ -7,8 +7,24 @@
 	<groupId>jss.advancedchat</groupId>
 	<artifactId>AdvancedChat</artifactId>
 	<version>1.6.0-Pre</version>
+	<packaging>jar</packaging>
+	
+	<name>AdvancedChat</name>
+	<description>a simple plugin that helps you customize your server chat to make it look better also brings a customizable chat system by group or rank and more....</description>
+	
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+    	<maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
 
 	<dependencies>
+		<dependency>
+			<groupId>org.spigotmc</groupId>
+			<artifactId>spigot-api</artifactId>
+			<version>1.17.1-R0.1-SNAPSHOT</version>
+			<scope>provided</scope>
+		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
@@ -27,13 +43,59 @@
 			<version>8.4.0</version>
 		</dependency>
 		<dependency>
-			<groupId>com.google.code.gson</groupId>
-			<artifactId>gson</artifactId>
-			<version>2.8.8</version>
+			<groupId>com.mojang</groupId>
+			<artifactId>authlib</artifactId>
+			<version>1.5.25</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+    		<groupId>com.comphenix.protocol</groupId>
+    		<artifactId>ProtocolLib</artifactId>
+    		<version>4.7.0</version>
+    		<scope>provided</scope>
+  		</dependency>
+  		<dependency>
+        	<groupId>com.github.MilkBowl</groupId>
+        	<artifactId>VaultAPI</artifactId>
+        	<version>1.7</version>
+        	<scope>provided</scope>
+    	</dependency>
+        <dependency>
+            <groupId>net.md-5</groupId>
+            <artifactId>bungeecord-api</artifactId>
+            <version>1.17-R0.1-SNAPSHOT</version>
+            <type>jar</type>
+            <scope>provided</scope>
+        </dependency>
+		<dependency>
+    		<groupId>net.md-5</groupId>
+    		<artifactId>bungeecord-chat</artifactId>
+    		<version>1.17-R0.1-SNAPSHOT</version>
+    		<scope>provided</scope>
 		</dependency>
 	</dependencies>
 
 	<repositories>
+        <repository>
+            <id>bungeecord-repo</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </repository>
+    	<repository>
+        	<id>jitpack.io</id>
+        	<url>https://jitpack.io</url>
+    	</repository>
+		<repository>
+			<id>dmulloy2-repo</id>
+			<url>https://repo.dmulloy2.net/repository/public/</url>
+		</repository>
+		<repository>
+			<id>minecraft-repo</id>
+			<url>https://libraries.minecraft.net/</url>
+     	</repository>
+		<repository>
+        	<id>spigot-repo</id>
+        	<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
+     	</repository>
 		<repository>
 			<id>placeholderapi</id>
 			<url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
@@ -41,12 +103,26 @@
 	</repositories>
 
 	<build>
+		<finalName>${project.name}-${project.version}</finalName>
 		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.7.0</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+					<compilerArgs>
+						<arg>-parameters</arg>
+					</compilerArgs>
+				</configuration>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-shade-plugin</artifactId>
 				<version>3.2.4</version>
 				<configuration>
+					<createDependencyReducedPom>false</createDependencyReducedPom>
 					<relocations>
 						<relocation>
 							<pattern>com.cryptomorin.xseries</pattern>
@@ -84,6 +160,7 @@
 							<Version>${project.version}</Version>
 						</manifestEntries>
 					</archive>
+					<outputDirectory>C:\Users\Alumno\Desktop\LocalHost\Server\1.8\plugins</outputDirectory>
 					<excludes>
 						<exclude>srccopia</exclude>
 					</excludes>
