--- a/AdvancedChat/pom.xml
+++ b/AdvancedChat/pom.xml
@@ -11,13 +11,39 @@
 	
 	<name>AdvancedChat</name>
 	<description>a simple plugin that helps you customize your server chat to make it look better also brings a customizable chat system by group or rank and more....</description>
+	<url>https://github.com/jonagamerpro1234/AdvancedChat</url>
 	
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
     	<maven.compiler.target>1.8</maven.compiler.target>
     </properties>
-
+    
+    <distributionManagement>
+    	<repository>
+    		<id>github</id>
+    		<name>AdvancedChat-repo</name>
+    		<url>https://maven.pkg.github.com/jonagamerpro1234/AdvancedChat</url>
+    	</repository>
+    </distributionManagement>
+    	
+	<issueManagement>
+		<system>GitHub</system>
+		<url>https://github.com/jonagamerpro1234/AdvancedChat/issues</url>
+	</issueManagement>
+	
+	<licenses>
+		<license>
+			<name>GLP-3.0</name>
+			<url>https://github.com/jonagamerpro1234/AdvancedChat/blob/main/LICENSE</url>
+		</license>
+	</licenses>
+	
+	<scm>
+		<connection>scm:git:https://github.com/jonagamerpro1234/AdvancedChat.git</connection>
+		<url>https://github.com/jonagamerpro1234/AdvancedChat</url>
+	</scm>
+	
 	<dependencies>
 		<dependency>
 			<groupId>org.spigotmc</groupId>
