--- a/AdvancedChat/src/main/resources/config.yml
+++ b/AdvancedChat/src/main/resources/config.yml
@@ -71,12 +71,37 @@ ChatFormat:
     # |Format|
     Format: '&b<name> &8>'
     
-    # |HoverEvent|
+    # |HoverEvent| This section allows you to modify the hover events in the chat
     HoverEvent:
-      - '&6Hello player'
-      - '<0>'
-      - '&e> %player_name%'
-
+    
+      # |Enabled| Here you can enable or disable this feature
+      Enabled: true
+  
+      # |Hover| This section allows you to define the hover text
+      Hover:
+        - '&6> &aHello &b<name>'
+        - '&6> &e%player_exp_to_level%'
+        - '&6> &dadd more lines like these'
+    # |ClickEvent| This section allows you to modify chat click events
+    ClickEvent:
+     
+      # |Enabled| Here you can enable or disable this feature
+      Enabled: true
+    
+      # |Mode| there are three different modes which are [ Command | Suggest | Url ]
+      Mode: Command
+    
+      # |Actions| This is where are the available events that you can use
+      Actions:
+      
+        # |Command| Clicking on the chat will execute the command defined in the config
+        Command: '/say <name> hello server'
+      
+        # |Url| Clicking on the chat opens a link
+        Url: 'https://jonagamerpro1234.gitbook.io/advancedchat/'
+      
+        # |Suggest-Command| Clicking on the chat suggests a command that you define in the config
+        Suggest-Command: '/msg <name>'
   
   # |Groups| 
   Groups:
@@ -286,6 +311,7 @@ AdvancedChat:
   Error-MySql: '&cCould not find the data, check the config &e[&bPath = Database&e]'
   ClearChat-Server: '&7The chat has been cleaned'
   ClearChat-Player: '&7The chat has been cleaned by &b[&e<name>&b]'
+  ClearChat-Staff: '&c{Staff} &7The chat has been cleaned by &b[&e<name>&b]'
   No-Permission: '&cYou dont have permission to do that!'
   No-Permission-Label: '&7Ask the server &b[&cowner&7 or an &eadministrator&b]&7 for help for more information'
   Error-Args: '&cUnknown Arguments'
